--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>
-        Мегапарсер HeadHunter
-    </title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            Мегапарсер HH
+        </title>
+    </head>
+    <body>
+<!--тут будет основная форма-->
+    <h1>
+        Мегапарсер HeadHunter.ru
+    </h1>
+    <h2>
+        Это главная страница
+    </h2>
+    <h3>
+        Информация по вакансиям, размещенным на сайте hh.ru
+    </h3>
+    <p>
+        По заданным параметрам парсер может получать вакансии
+        <br>
+        и выводить статистику по необходимым навыкам
+    </p>
+    <p>
+<!--        переход на другую страницу -->
+        Можно добавить что-то еще
+    </p>
+    <a href="form.html">
+        Начать поиск
+    </a>
 
-</body>
+    </body>
 </html>
